--- a/popup.css
+++ b/popup.css
@@ -6,6 +6,13 @@ label {
 button {
     margin: auto;
 }
+.row {
+    font-size: 14px;
+    width: 140px;
+    display: inline-block;
+    height: 40px;
+    margin: 10px 10px 0px 10px;
+}
 /*.mdc-list-item {
     height:40 pt;
     background-color:blue;
